[gd_scene load_steps=15 format=4 uid="uid://1anu2f5meh81"]

[ext_resource type="Script" uid="uid://cwboh1ka0fb3u" path="res://Scripts/Items/Interactable_Button.gd" id="1_qwpl6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y6deb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hw1ea"]
resource_name = "Lever_01"
vertex_color_use_as_albedo = true
albedo_color = Color(0.633949, 0.605047, 0.693094, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bqe4j"]
resource_name = "Lever_02"
vertex_color_use_as_albedo = true
albedo_color = Color(0.551131, 0.551131, 0.551131, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_abev4"]
resource_name = "Lever_03"
vertex_color_use_as_albedo = true
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4fe46"]
resource_name = "Lever_04"
vertex_color_use_as_albedo = true
albedo_color = Color(0.906442, 0.26727, 0.257432, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="ArrayMesh" id="ArrayMesh_hpgm4"]
resource_name = "Cube"
_surfaces = [{
"aabb": AABB(-0.00387064, -0.00387064, 0.00106707, 0.00774128, 0.00774128, 0.0175925),
"attribute_data": PackedByteArray("AAAgPwAAgD8AACA/AACAPwAAID8AAEA/AAAgPwAAQD8AACA/AAAAAAAAID8AAIA+AADAPgAAgD4AAMA+AAAAAAAAID8AAEA/AAAgPwAAgD8AAMA+AACAPwAAwD4AAEA/AADAPgAAgD4AAMA+AAAAPwAAAD4AAAA/AAAAPgAAgD4AACA/AACAPgAAID8AAAA/AADAPgAAAD8AAMA+AACAPgAAID8AAAA/AAAgPwAAQD8AAMA+AABAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAIA+AAAgPwAAgD4AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAEA/AAAgPwAAQD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAAAAAAAgPwAAAAAAACA/AACAPwAAID8AAIA/AAAgPwAAQD8AACA/AABAPwAAID8AAIA/AAAgPwAAgD8AACA/AABAPwAAID8AAEA/AAAgPwAAgD4AACA/AACAPgAAID8AAAAAAAAgPwAAAAAAACA/AABAPwAAID8AAEA/AAAgPwAAAD8AACA/AAAAPwAAID8AAIA+AAAgPwAAgD4AACA/AAAAAAAAID8AAAAAAAAgPwAAQD8AACA/AABAPwAAID8AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAIA/AAAgPwAAgD8AACA/AABAPwAAID8AAEA/AAAgPwAAgD8AACA/AACAPwAAID8AAEA/AAAgPwAAQD8AACA/AACAPgAAID8AAIA+AAAgPwAAAAAAACA/AAAAAAAAID8AAEA/AAAgPwAAQD8AACA/AAAAPwAAID8AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAIA+AAAgPwAAgD4AAGA/AACAPgAAYD8AAAA/AAAgPwAAAD8AACA/AACAPgAAID8AAIA+AAAgPwAAgD4AACA/AAAAAAAAID8AAAAAAAAgPwAAQD8AACA/AABAPwAAID8AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAYD8AAIA+AAAgPwAAgD4AACA/AAAAPwAAYD8AAAA/AABgPwAAgD4AAGA/AACAPgAAYD8AAAA/AABgPwAAAD8AAGA/AACAPgAAYD8AAIA+AABgPwAAAD8AAGA/AAAAPwAAID8AAIA+AAAgPwAAgD4AAGA/AACAPgAAYD8AAIA+AABgPwAAAD8AAGA/AAAAPwAAID8AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAYD8AAAA/AABgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAYD8AAIA+AABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAAD8AACA/AACAPgAAID8AAIA+AAAgPwAAAD8AACA/AAAAPwAAID8AAIA+AAAgPwAAgD4AAGA/AACAPgAAYD8AAIA+AABgPwAAAD8AAGA/AAAAPwAAID8AAIA+AAAgPwAAgD4AAGA/AACAPgAAYD8AAIA+AABgPwAAgD4AACA/AACAPgAAID8AAAA/AABgPwAAAD8="),
"bone_aabbs": [AABB(-0.00387064, -0.00387064, 0.00106707, 0.00774128, 0.00774128, 0.0175925), AABB(-0.000352832, -0.000129001, 0.0181259, 0.000705664, 0.00088929, 0.000238491)],
"format": 34359745559,
"index_count": 240,
"index_data": PackedByteArray("AAABAAIAAgADAAAABAAFAAYABgAHAAQACAAJAAoACgALAAgADAANAA4ADgAPAAwAEAARABIAEgATABAAFAAVABYAFgAXABQAGAAZABoAGgAbABgAHAAdAB4AHgAfABwAIAAhACIAIgAjACAAJAAlACYAJgAnACQAKAApACoAKgArACgALAAtAC4ALgAvACwAMAAxADIAMgAzADAANAA1ADYANgA3ADQAOAA5ADoAOgA7ADgAPAA9AD4APgA/ADwAQABBAEIAQgBDAEAARABFAEYARgBHAEQASABJAEoASgBLAEgATABNAE4ATgBPAEwAUABRAFIAUgBTAFAAVABVAFYAVgBXAFQAWABZAFoAWgBbAFgAXABdAF4AXgBfAFwAYABhAGIAYgBjAGAAZABlAGYAZgBnAGQAaABpAGoAagBrAGgAbABtAG4AbgBvAGwAcABxAHIAcgBzAHAAdAB1AHYAdgB3AHQAeAB5AHoAegB7AHgAfAB9AH4AfgB/AHwAgACBAIIAggCDAIAAhACFAIYAhgCHAIQAiACJAIoAigCLAIgAjACNAI4AjgCPAIwAkACRAJIAkgCTAJAAlACVAJYAlgCXAJQAmACZAJoAmgCbAJgAnACdAJ4AngCfAJwA"),
"material": SubResource("StandardMaterial3D_hw1ea"),
"name": "Lever_01",
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAA=="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 160,
"vertex_data": PackedByteArray("ZmMau2ZjGrvsBEI7j6p9u4+qfbvsBEI7j6p9u4+qfTvsBEI7ZmMau2ZjGjvsBEI7j6p9u4+qfbvsBEI7j6p9O4+qfbvsBEI7j6p9O4+qfbvN3Is6j6p9u4+qfbvN3Is6j6p9u4+qfTvsBEI7j6p9u4+qfbvsBEI7j6p9u4+qfbvN3Is6j6p9u4+qfTvN3Is6j6p9O4+qfbvN3Is6j6p9O4+qfTvN3Is6j6p9u4+qfTvN3Is6j6p9u4+qfbvN3Is6j6p9O4+qfbvsBEI7j6p9O4+qfTvsBEI7j6p9O4+qfTvN3Is6j6p9O4+qfbvN3Is6j6p9O4+qfTvsBEI7j6p9u4+qfTvsBEI7j6p9u4+qfTvN3Is6j6p9O4+qfTvN3Is6ZmMaO2ZjGjvXY3g7ZmMaO2ZjGjvsBEI7ZmMaO2ZjGrvsBEI7ZmMaO2ZjGrvXY3g7ZmMaO2ZjGjvsBEI7j6p9O4+qfTvsBEI7j6p9O4+qfbvsBEI7ZmMaO2ZjGrvsBEI7ZmMau2ZjGjvsBEI7j6p9u4+qfTvsBEI7j6p9O4+qfTvsBEI7ZmMaO2ZjGjvsBEI7ZmMaO2ZjGrvsBEI7j6p9O4+qfbvsBEI7j6p9u4+qfbvsBEI7ZmMau2ZjGrvsBEI7FLKfuhSyn7rXY3g7ZmMau2ZjGrvXY3g7ZmMau2ZjGjvXY3g7FLKfuhSynzrXY3g7ZmMau2ZjGrvXY3g7ZmMau2ZjGrvsBEI7ZmMau2ZjGjvsBEI7ZmMau2ZjGjvXY3g7ZmMaO2ZjGrvXY3g7ZmMaO2ZjGrvsBEI7ZmMau2ZjGrvsBEI7ZmMau2ZjGrvXY3g7ZmMau2ZjGjvXY3g7ZmMau2ZjGjvsBEI7ZmMaO2ZjGjvsBEI7ZmMaO2ZjGjvXY3g7FLKfOhSyn7rXY3g7ZmMaO2ZjGrvXY3g7ZmMau2ZjGrvXY3g7FLKfuhSyn7rXY3g7FLKfuhSynzrXY3g7ZmMau2ZjGjvXY3g7ZmMaO2ZjGjvXY3g7FLKfOhSynzrXY3g7FLKfOhSynzrXY3g7ZmMaO2ZjGjvXY3g7ZmMaO2ZjGrvXY3g7FLKfOhSyn7rXY3g7wJVtu8CVbbtum2M8FLKfuhSyn7pum2M8FLKfuhSynzpum2M8wJVtu8CVbTtum2M8wJVtu8CVbbsUuYw8wJVtu8CVbbtum2M8wJVtu8CVbTtum2M8wJVtu8CVbTsUuYw8wJVtO8CVbbtum2M8FLKfOhSyn7pum2M8FLKfuhSyn7pum2M8wJVtu8CVbbtum2M8wJVtu8CVbTtum2M8FLKfuhSynzpum2M8FLKfOhSynzpum2M8wJVtO8CVbTtum2M8wJVtO8CVbTtum2M8FLKfOhSynzpum2M8FLKfOhSyn7pum2M8wJVtO8CVbbtum2M8wJVtu8CVbbsUuYw8wJVtu8CVbTsUuYw8wJVtO8CVbTsUuYw8wJVtO8CVbbsUuYw8wJVtO8CVbbsUuYw8wJVtO8CVbbtum2M8wJVtu8CVbbtum2M8wJVtu8CVbbsUuYw8wJVtu8CVbTsUuYw8wJVtu8CVbTtum2M8wJVtO8CVbTtum2M8wJVtO8CVbTsUuYw8wJVtO8CVbTsUuYw8wJVtO8CVbTtum2M8wJVtO8CVbbtum2M8wJVtO8CVbbsUuYw8qeyYuvM3NrsUuYw8qeyYOvM3NrsUuYw8qeyYOvM3NjsUuYw8qeyYuvM3NjsUuYw8XDMHukno9Lrx25g8qeyYuvM3Nrvx25g8qeyYuvM3Njvx25g8XDMHukno9Drx25g8qeyYuvM3Nrvx25g8qeyYuvM3NrsUuYw8qeyYuvM3NjsUuYw8qeyYuvM3Njvx25g8qeyYOvM3Nrvx25g8qeyYOvM3NrsUuYw8qeyYuvM3NrsUuYw8qeyYuvM3Nrvx25g8qeyYuvM3Njvx25g8qeyYuvM3NjsUuYw8qeyYOvM3NjsUuYw8qeyYOvM3Njvx25g8qeyYOvM3Njvx25g8qeyYOvM3NjsUuYw8qeyYOvM3NrsUuYw8qeyYOvM3Nrvx25g8XDMHukno9Do915Q8XDMHukno9Drx25g8XDMHOkno9Drx25g8XDMHOkno9Do915Q8XDMHOkno9Lrx25g8qeyYOvM3Nrvx25g8qeyYuvM3Nrvx25g8XDMHukno9Lrx25g8XDMHukno9Drx25g8qeyYuvM3Njvx25g8qeyYOvM3Njvx25g8XDMHOkno9Drx25g8XDMHOkno9Drx25g8qeyYOvM3Njvx25g8qeyYOvM3Nrvx25g8XDMHOkno9Lrx25g8XDMHOkno9Do915Q8XDMHOkno9Drx25g8XDMHOkno9Lrx25g8XDMHOkno9Lo915Q8XDMHukno9Lo915Q8XDMHukno9Lrx25g8XDMHukno9Drx25g8XDMHukno9Do915Q8XDMHOkno9Lo915Q8XDMHOkno9Lrx25g8XDMHukno9Lrx25g8XDMHukno9Lo915Q8Vvy4uVxEB7nxW5Y8Vvy4OVxEB7nxW5Y8Vvy4OR9ORzrDfJQ8Vvy4uR9ORzrDfJQ8/3//f////z//f/9/////P/9//3////8//3//f////z//fwAA/3//v/9/AAD/f/+//38AAP9//7//fwAA/3//vwAA/3//f/+/AAD/f/9//78AAP9//3//vwAA/3//f/+//////////7//////////v/////////+//////////7////9//3//v////3//f/+/////f/9//7////9//3//v/9/////f/+//3////9//7//f////3//v/9/////f/+/////f////7////9/////v////3////+/////f////7//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////PwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//f///////v/9///////+//3///////7//f///////v/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/////////+//////////7//////////v/////////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////v/////8AAP8//////wAA/z//////AAD/P/////8AAP8//3//f////z//f/9/////P/9//3////8//3//f////z8AAP9/////vwAA/3////+/AAD/f////78AAP9/////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7////9/////v////3////+/////f////7////9/////v/9///////+//3///////7//f///////v/9///////+/1OUAAAAA/z/U5QAAAAD/P9TlAAAAAP8/1OUAAAAA/z8=")
}, {
"aabb": AABB(-0.00121838, -0.00121838, 0.00379013, 0.00243676, 0.00297582, 0.0184452),
"attribute_data": PackedByteArray("AAAgPwAAQD8AACA/AABAPwAAID8AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAIA/AAAgPwAAgD8AACA/AABAPwAAID8AAEA/AAAgPwAAgD4AACA/AACAPgAAID8AAAAAAAAgPwAAAAAAAGA/AACAPgAAYD8AAIA+AABgPwAAAD8AAGA/AAAAPwAAID8AAIA+AAAgPwAAgD4AAGA/AACAPgAAYD8AAIA+AABgPwAAAD8AAGA/AAAAPwAAID8AAAA/AAAgPwAAAD8AACA/AACAPgAAID8AAAA/AAAgPwAAAD8AACA/AACAPg=="),
"bone_aabbs": [AABB(-0.00121838, -0.00121838, 0.00379013, 0.00243676, 0.00244676, 0.0101119), AABB(-0.000352832, -0.000129001, 0.0181259, 0.000705664, 0.00188644, 0.00411941)],
"format": 34359745559,
"index_count": 48,
"index_data": PackedByteArray("AAABAAIAAgADAAAABAAFAAYABgAHAAQACAAJAAoACgALAAgADAANAA4ADgAPAAwAEAARABIAEgATABAAFAAVABYAFgAXABQAGAAZABoAGgAbABgAHAAdAB4AHgAfABwA"),
"material": SubResource("StandardMaterial3D_bqe4j"),
"name": "Lever_02",
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAA="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray("FLKfuhSynzpum2M8FLKfuhSynzrXY3g7FLKfOhSynzrXY3g7FLKfOhSynzpum2M8FLKfOhSynzpum2M8FLKfOhSynzrXY3g7FLKfOhSyn7rXY3g7FLKfOhSyn7pum2M8FLKfuhSyn7pum2M8FLKfuhSyn7rXY3g7FLKfuhSynzrXY3g7FLKfuhSynzpum2M8FLKfOhSyn7pum2M8FLKfOhSyn7rXY3g7FLKfuhSyn7rXY3g7FLKfuhSyn7pum2M8Vvy4uV+UYzrUJrY8Vvy4uVxEB7nxW5Y8Vvy4uR9ORzrDfJQ8Vvy4ucxZ5jqoR7Q8Vvy4OV+UYzrUJrY8Vvy4OVxEB7nxW5Y8Vvy4uVxEB7nxW5Y8Vvy4uV+UYzrUJrY8Vvy4ucxZ5jqoR7Q8Vvy4uR9ORzrDfJQ8Vvy4OR9ORzrDfJQ8Vvy4OcxZ5jqoR7Q8Vvy4OV+UYzrUJrY8Vvy4OcxZ5jqoR7Q8Vvy4OR9ORzrDfJQ8Vvy4OVxEB7nxW5Y8/3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//38AAP///7//fwAA////v/9/AAD///+//38AAP///78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v/9/Khr///8//38qGv///z//fyoa////P/9/Khr///8/KZr//////78pmv//////vyma//////+/KZr//////7////9/////v////3////+/////f////7////9/////vw==")
}, {
"aabb": AABB(-0.000515749, -0.00186849, 0.018169, 0.0010315, 0.00373699, 1e-05),
"attribute_data": PackedByteArray("AABgPwAAgD4AAGA/AAAAPwAAID8AAAA/AAAgPwAAgD4="),
"bone_aabbs": [AABB(-0.000515749, -0.00186849, 0.018169, 0.0010315, 0.00373699, 1.00005e-05)],
"format": 34359745559,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAgADAAAA"),
"material": SubResource("StandardMaterial3D_abev4"),
"name": "Lever_03",
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAA=="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("XDMHukno9Lo915Q8XDMHukno9Do915Q8XDMHOkno9Do915Q8XDMHOkno9Lo915Q8/3//fwAA/7//f/9/AAD/v/9//38AAP+//3//fwAA/78=")
}, {
"aabb": AABB(-0.00052276, 0.000654002, 0.0219518, 0.00104552, 0.00194991, 0.00279956),
"attribute_data": PackedByteArray("AAAgPwAAgD4AACA/AACAPgAAYD8AAIA+AABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AAAgPwAAAD8AACA/AAAAPwAAYD8AAAA/AABgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AAGA/AACAPgAAYD8AAIA+AABgPwAAAD8AAGA/AAAAPwAAYD8AAIA+AABgPwAAAD8AACA/AAAAPwAAID8AAIA+AAAgPwAAAD8AACA/AAAAPwAAID8AAIA+AAAgPwAAgD4AAGA/AAAAPwAAYD8AAIA+AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+AAAgPwAAgD4AAGA/AACAPgAAYD8AAIA+"),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(-0.00052276, 0.000654002, 0.0219518, 0.00105552, 0.00194991, 0.00279956)],
"format": 34359745559,
"index_count": 54,
"index_data": PackedByteArray("AAABAAIAAgADAAAABAAFAAYABgAHAAQACAAJAAoACgALAAgADAANAA4ADgAPAAwAEAARABIAEgATABAAFAAVABYAFgAXABQAGAAZABoAGgAbABgAHAAdAB4AHgAfABwAIAAhACIAIgAjACAA"),
"material": SubResource("StandardMaterial3D_4fe46"),
"name": "Lever_04",
"primitive": 3,
"skin_data": PackedByteArray("AQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("0wkJOk1xKzo4mrY8Vvy4OV+UYzrUJrY8Vvy4uV+UYzrUJrY80wkJuk1xKzo4mrY80wkJulSmKjts/cc80wkJuqo1ATtE1LM80wkJOqo1ATtE1LM80wkJOlSmKjts/cc80wkJuqo1ATtE1LM8Vvy4ucxZ5jqoR7Q8Vvy4OcxZ5jqoR7Q80wkJOqo1ATtE1LM80wkJOk1xKzo4mrY80wkJOqo1ATtE1LM8Vvy4OcxZ5jqoR7Q8Vvy4OV+UYzrUJrY80wkJuk1xKzo4mrY8Vvy4uV+UYzrUJrY8Vvy4ucxZ5jqoR7Q80wkJuqo1ATtE1LM80wkJuvyZqDphw8o80wkJulSmKjts/cc80wkJOlSmKjts/cc80wkJOvyZqDphw8o80wkJOlSmKjts/cc80wkJOqo1ATtE1LM80wkJOk1xKzo4mrY80wkJOvyZqDphw8o80wkJulSmKjts/cc80wkJuvyZqDphw8o80wkJuk1xKzo4mrY80wkJuqo1ATtE1LM80wkJOvyZqDphw8o80wkJOk1xKzo4mrY80wkJuk1xKzo4mrY80wkJuvyZqDphw8o81OUAAP///7/U5QAA////v9TlAAD///+/1OUAAP///78pmv//////vyma//////+/KZr//////78pmv//////v9TlAAD///+/1OUAAP///7/U5QAA////v9TlAAD///+/1OUAAP///7/U5QAA////v9TlAAD///+/1OUAAP///7/U5QAA////v9TlAAD///+/1OUAAP///7/U5QAA////v/9/KZoAAP+//38pmgAA/7//fymaAAD/v/9/KZoAAP+/////f////7////9/////v////3////+/////f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v/9/Khr///8//38qGv///z//fyoa////P/9/Khr///8/")
}]
blend_shape_mode = 0

[sub_resource type="Skin" id="Skin_7fh43"]
resource_name = "Skin"
bind_count = 2
bind/0/name = &"Root"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
bind/1/name = &"Handle"
bind/1/bone = -1
bind/1/pose = Transform3D(1, 0, 0, 0, 0.254639, 0.967036, 0, -0.967036, 0.254639, 0, -0.0166753, -0.00439092)

[sub_resource type="Animation" id="Animation_5l8ad"]
resource_name = "Armature|Lever_Use"
length = 1.625
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("Armature/Skeleton3D:Handle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.128382, 0, 0, 0.991725, 0.0416667, 1, -0.127806, 0, 0, 0.991799, 0.0833333, 1, -0.126117, 0, 0, 0.992015, 0.125, 1, -0.123373, 0, 0, 0.99236, 0.166667, 1, -0.119631, 0, 0, 0.992818, 0.208333, 1, -0.114946, 0, 0, 0.993372, 0.25, 1, -0.109374, 0, 0, 0.994001, 0.291667, 1, -0.102971, 0, 0, 0.994684, 0.333333, 1, -0.0957925, 0, 0, 0.995401, 0.375, 1, -0.0878947, 0, 0, 0.99613, 0.416667, 1, -0.079335, 0, 0, 0.996848, 0.458333, 1, -0.0701717, 0, 0, 0.997535, 0.5, 1, -0.060464, 0, 0, 0.99817, 0.541667, 1, -0.0502726, 0, 0, 0.998736, 0.583333, 1, -0.0396593, 0, 0, 0.999213, 0.625, 1, -0.0286871, 0, 0, 0.999588, 0.666667, 1, -0.0174203, 0, 0, 0.999848, 0.708333, 1, -0.005924, 0, 0, 0.999982, 0.916667, 1, 0.0526773, 0, 0, 0.998612, 0.958333, 1, 0.0641548, 0, 0, 0.99794, 1, 1, 0.0753971, 0, 0, 0.997154, 1.04167, 1, 0.0863397, 0, 0, 0.996266, 1.08333, 1, 0.096919, 0, 0, 0.995292, 1.125, 1, 0.107073, 0, 0, 0.994251, 1.16667, 1, 0.11674, 0, 0, 0.993162, 1.20833, 1, 0.125862, 0, 0, 0.992048, 1.25, 1, 0.134378, 0, 0, 0.99093, 1.29167, 1, 0.142233, 0, 0, 0.989833, 1.33333, 1, 0.149371, 0, 0, 0.988781, 1.375, 1, 0.155735, 0, 0, 0.987799, 1.41667, 1, 0.161271, 0, 0, 0.98691, 1.43333, 1, 0.163133, 0, 0, 0.986604, 1.45833, 1, 0.165925, 0, 0, 0.986138, 1.5, 1, 0.169641, 0, 0, 0.985506, 1.54167, 1, 0.172366, 0, 0, 0.985033, 1.58333, 1, 0.174043, 0, 0, 0.984738, 1.625, 1, 0.174615, 0, 0, 0.984637)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7x0v"]
_data = {
&"Armature|Lever_Use": SubResource("Animation_5l8ad")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_gqmmt"]
radius = 4.46

[sub_resource type="ViewportTexture" id="ViewportTexture_qwpl6"]
viewport_path = NodePath("InteractTooltip/SubViewport")

[sub_resource type="FontVariation" id="FontVariation_lau5n"]
variation_embolden = -0.75

[sub_resource type="LabelSettings" id="LabelSettings_28pq3"]
font = SubResource("FontVariation_lau5n")
font_size = 61
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.396078)

[node name="Interactable_Button" type="Node3D"]
transform = Transform3D(-0.658532, 0, -0.752553, 0, 1, 0, 0.752553, 0, -0.658532, 0, 0, 0)
script = ExtResource("1_qwpl6")

[node name="Body" type="CharacterBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_y6deb")

[node name="Skin" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 0, 0, 0)

[node name="Lever" type="Node3D" parent="Body/Skin"]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 0, 0, 0)

[node name="Armature" type="Node3D" parent="Body/Skin/Lever"]
transform = Transform3D(100, 0, 0, 0, -1.19209e-05, 100, 0, -100, -1.19209e-05, 0, 0, 0)

[node name="Skeleton3D" type="Skeleton3D" parent="Body/Skin/Lever/Armature"]
bones/0/name = "Root"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, -1.19209e-07, -1, 0, 1, -1.19209e-07, 0, 0, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, 0, 0)
bones/0/rotation = Quaternion(0.707107, 0, 0, 0.707107)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Handle"
bones/1/parent = 0
bones/1/rest = Transform3D(1, 0, 0, 0, 0.967036, 0.254639, 0, -0.254639, 0.967036, 0, 0.0172437, 0)
bones/1/enabled = true
bones/1/position = Vector3(0, 0.0172437, 0)
bones/1/rotation = Quaternion(-0.128382, 0, 0, 0.991725)
bones/1/scale = Vector3(1, 1, 1)
bones/2/name = "Handle_end"
bones/2/parent = 1
bones/2/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00770215, 0)
bones/2/enabled = true
bones/2/position = Vector3(0, 0.00770215, 0)
bones/2/rotation = Quaternion(0, 0, 0, 1)
bones/2/scale = Vector3(1, 1, 1)

[node name="Cube" type="MeshInstance3D" parent="Body/Skin/Lever/Armature/Skeleton3D"]
mesh = SubResource("ArrayMesh_hpgm4")
skin = SubResource("Skin_7fh43")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body/Skin/Lever"]
libraries = {
&"": SubResource("AnimationLibrary_w7x0v")
}

[node name="Area3D" type="Area3D" parent="Body" groups=["Button"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.879536, 0)
shape = SubResource("SphereShape3D_gqmmt")

[node name="InteractTooltip" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.90915, 0)
billboard = 1
texture = SubResource("ViewportTexture_qwpl6")

[node name="SubViewport" type="SubViewport" parent="InteractTooltip"]
transparent_bg = true
size = Vector2i(64, 64)

[node name="Label" type="Label" parent="InteractTooltip/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "E"
label_settings = SubResource("LabelSettings_28pq3")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Body/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Body/Area3D" to="." method="_on_area_3d_area_exited"]
